testdata/baselines/reference/submodule/conformance/parserArrowFunctionExpression12.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
fileJs.js(1,1): error TS2304: Cannot find name 'a'.
fileJs.js(1,13): error TS2304: Cannot find name 'c'.
fileJs.js(1,22): error TS2304: Cannot find name 'e'.
fileTs.ts(1,1): error TS2304: Cannot find name 'a'.
fileTs.ts(1,13): error TS2304: Cannot find name 'c'.
fileTs.ts(1,22): error TS2304: Cannot find name 'e'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== fileJs.js (3 errors) ====
    a ? (b) => (c): d => e // Legal JS
    ~
!!! error TS2304: Cannot find name 'a'.
                ~
!!! error TS2304: Cannot find name 'c'.
                         ~
!!! error TS2304: Cannot find name 'e'.
    
==== fileTs.ts (3 errors) ====
    a ? (b) => (c): d => e
    ~
!!! error TS2304: Cannot find name 'a'.
                ~
!!! error TS2304: Cannot find name 'c'.
                         ~
!!! error TS2304: Cannot find name 'e'.
    